<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPage"
    android:layout_margin="5dp"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="@drawable/secondgradient"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/firstNameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textCapWords"
        android:hint="@string/first_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/lastNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstNameText"
        android:layout_alignRight="@id/firstNameText"
        android:layout_alignLeft="@id/firstNameText"
        android:inputType="textCapWords"
        android:hint="@string/last_name"
        android:layout_alignEnd="@id/firstNameText"
        android:layout_alignStart="@id/firstNameText" />

    <EditText
        android:id="@+id/userNameRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lastNameText"
        android:layout_alignRight="@id/lastNameText"
        android:layout_alignLeft="@id/lastNameText"
        android:inputType="textPersonName"
        android:hint="@string/user_name"
        android:layout_alignStart="@id/lastNameText"
        android:layout_alignEnd="@id/lastNameText" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/userNameRegister"
        android:layout_alignRight="@id/userNameRegister"
        android:layout_alignLeft="@id/userNameRegister"
        android:layout_alignStart="@id/userNameRegister"
        android:layout_alignEnd="@id/userNameRegister" />

    <CheckBox
        android:id="@+id/checkPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        android:layout_below="@id/passwordRegister"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true">
    </CheckBox>
    
    <RadioGroup
        android:id="@+id/genderRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_below="@id/passwordRegister">
        <RadioButton
            android:id="@+id/maleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            >
        </RadioButton>
        <RadioButton
            android:id="@+id/femaleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp">
        </RadioButton>
    </RadioGroup>

    <TextView
        android:id="@+id/justText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_position"
        android:layout_below="@id/jerseyNumber"
        android:textSize="25sp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:id="@+id/positionRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/justText"
        android:layout_alignParentStart="true">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batsman"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp">
        </RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bowler"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp">
        </RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_rounder"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp">
        </RadioButton>


    </RadioGroup>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@id/positionRadioButton"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:background="#90EE90"
        android:layout_centerInParent="true"
         />

    <EditText
        android:id="@+id/jerseyNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/genderRadioButton"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:hint="Enter your Jersey Number"
        android:layout_marginLeft="10dp"
        android:inputType="number" />
</RelativeLayout>
</ScrollView>