<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInPage"
    android:background="#000"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    >

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/loginImage"
        android:background="@drawable/cool"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
       android:layout_below="@id/usernameText"
        android:layout_alignLeft="@id/usernameText"
        android:layout_alignRight="@id/usernameText"
        android:layout_marginTop="45dp"
        android:background="@drawable/cool"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:ems="10"
        android:layout_alignStart="@id/usernameText"
        android:layout_alignEnd="@id/usernameText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="#FFF"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/passwordText"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/passwordText"
        android:layout_marginTop="70dp"
        android:layout_marginRight="50dp"
        android:text="@string/register"
        android:textColor="#FFF"
        android:background="@drawable/button"
        android:onClick="register"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp" />
</RelativeLayout>